Broken playlist popup info menu, dual playlist in memory
Steps:
- Load IceCast playlist (any other ?)
- Selected an entry and use contextual popup menu to trigger "Info" dialog
** problem 1: playlist if now empty
Popup menus refers to PlayListDialog()::getInstance to parent their entries. But the original playlist is created in main_interface an is not related to the playlistdialog instance. The 'emptied' playlist shown on click is a new playlist.
** problem 2: dual playlist widget in memory !